--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "collections",
+  "name": "@non-hacker/collections",
   "version": "5.1.11",
   "description": "data structures with idiomatic JavaScript collection interfaces",
   "homepage": "http://www.collectionsjs.com",
